# decent-curl-impersonate

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  publish.yml  updater-ci-dispatch-smoke-cleanup.yml  updater-ci-dispatch-smoke.yml
docs/superpowers/plans/: 2026-07-21-decent-curl-impersonate.md
docs/superpowers/specs/: 2026-07-21-decent-curl-impersonate-design.md
python/decent_curl_impersonate/: __init__.py  __main__.py  engine.py  protocol.py  worker.py
python/tests/: conftest.py  test_engine.py  test_protocol.py  test_worker.py  test_workflow_contracts.py
scripts/: verify-package.mjs
src/: index.ts  protocol.ts  schemas.ts  tools.ts  worker-client.ts
test/: contract.test.ts  live-fingerprint.test.ts  protocol.test.ts  tools.test.ts  worker-client.test.ts
test/fixtures/: fake-worker.ts
upstream/: curl_cffi.lock.json  curl_impersonate.lock.json
